--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
+    "autoprefixer": "^10.4.15",
+    "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
+    "multiparty": "^4.2.3",
     "next": "13.4.16",
+    "next-auth": "^4.23.0",
+    "postcss": "^8.4.27",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.3"
   }
 }
